k8s/ingress/result.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
spec:
  rules:
  - http:
    paths:
    - path: /result
      pathType: Prefix
      backend:
        service:
          name: result-service
          port:
            number: 80
