k8s/ingress/vote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
spec:
  rules:
  - http:
    paths:
    - path: /vote
      pathType: Prefix
      backend:
        service:
          name: vote-service
          port:
            number: 80
