k8s/ingress/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80

  - http:
      paths:
      - path: /result(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
